Fix cutoff search bar on smaller screens

--- a/src/view/components/elements/TreeBar.css
+++ b/src/view/components/elements/TreeBar.css
@@ -28,6 +28,7 @@
 	display: flex;
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
+	min-width: 0;
 }
 
 .search {
